FEAT pages Client and Patients

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,12 +1,11 @@
 .header{
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     &__logo{
-        object-fit: cover;
-        width: 30%;
+        height: 10vh;
     }
 }
