FEAT styles at Home Especialities, formularies, Header, Navbar, Global and  Schema

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,7 @@
 @import "./Reset.scss";
+@import "./styles/Global.scss";
+@import "./styles/Schema.scss";
+
+.App{
+    background-color: $background-color;
+}
