--- a/src/styles/Schema.scss
+++ b/src/styles/Schema.scss
@@ -1,6 +1,6 @@
 
 $base-color: #8cc9a9;
-$secondary-color: #c8c8c8;
+$secondary-color: #e2e1e1;
 $background-color: #f4f3ef;
 $border: 1px solid black;
 
