--- a/src/reset.scss
+++ b/src/reset.scss
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import './styles/Schema.scss';
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -21,6 +22,7 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	vertical-align: baseline;
+	background-color: $background-color;
 	
 }
 /* HTML5 display-role reset for older browsers */
