--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -15,7 +15,6 @@
             font-size: 26px;
             color: white;
            
-
             span{
                 font-weight: 700;
             }
@@ -51,14 +50,77 @@
         }
     }
 
+    h3{
+        text-align: center;
+        padding: 10px;
+    }
+
     &__specs{
         margin-top: 10px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
 
         &--img{
-            width: 50%;
             margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+
+            img{
+                width: 80%;
+                height: 80%;
+                object-fit: contain;
+            }
+        }
+
+        &--info{
+            text-transform: capitalize;
+        }
+    }
+
+    &__remote{
+        width: 90%;
+        margin: 0 auto;
+        position: relative;
+        padding: 10px;
+
+
+        img{
+            width: 100%;
+            height: 70%;
+            object-fit: cover;
+        }
+
+        &--h2{
+            position: absolute;
+            top: 75%;
+            font-size: 32px;
+            left: 10%;
+            color: $grey;
+            text-transform: uppercase;            
+        }
+
+        &--btn{
+            position: absolute;
+            left: 40%;
+            top:82%;
+            background-color: $base-color;
+            padding: 10px;
+            width: 20%;
+            cursor: pointer;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: white;
+            transition: ease 1s;
+            border: none;
+
+            &:hover{
+                background-color: white;
+                color: $base-color;
+            }
         }
     }
   
