--- a/src/styles/Map.scss
+++ b/src/styles/Map.scss
@@ -1,8 +1,11 @@
 .leaflet-container {
-  width: 70%;
-  height: 50vh;
+  width: 90%;
+  height: 60vh;
+  margin: 0 auto;
+
 }
 
-#map {
-  height: 400px;
+#map{
+
+
 }
