--- a/src/styles/FormLogin.scss
+++ b/src/styles/FormLogin.scss
@@ -1,14 +1,13 @@
 @import "Schema.scss";
 
 .formLogin__box{
-    // height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .formLogin {
-  margin: auto auto;
+  margin: 0 auto;
   width: 380px;
   height: 380px;
   text-align: center;
@@ -42,7 +41,7 @@
     }
 
     label {
-      font-size: 0.8em;
+      font-size: 1em;
     }
 
   }
