--- a/src/App.scss
+++ b/src/App.scss
@@ -6,4 +6,7 @@
     background-color: $background-color;
     height: 100%;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
