--- a/src/styles/Map.scss
+++ b/src/styles/Map.scss
@@ -1,11 +1,8 @@
 .leaflet-container {
-  width: 90%;
-  height: 60vh;
+  width: 70%;
+  height: 50vh;
   margin: 0 auto;
+  margin-top: 2em;
 
 }
 
-#map{
-
-
-}
