--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @import './styles/Schema.scss';
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&display=swap');
 
+*{
+  font-family: 'Hind', sans-serif;
+}
 
 body {
   margin: 0;
