--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,14 +1,65 @@
+@import "Schema.scss";
 .footer {
-    margin: 0 auto;
+  width: 100%;
+  margin: 0 auto;
   padding: 2em 0 1em;
-  width: 80%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   gap: 2em;
+  border-top: $border;
 
-  &__logo{
-    img{
-      width: 150px;
+  &__logo {
+    img {
+      width: 50px;
+    }
+    p{
+      font-weight: 800;
+    }
+  }
+
+  &__ul {
+    h3 {
+      font-size: 1.2em;
+      padding-bottom: 0.2em;
+    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__li {
+    padding: 0.1em 0;
+    cursor: pointer;
+    &:hover {
+      text-decoration: underline $base-color;
+    }
+    &__horario {
+      padding-top: 0.5em;
+      border-bottom: $border;
+      font-weight: 600;
+      cursor: inherit;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+    &__p {
+      text-align: center;
+      font-size: 0.8em;
+      cursor: inherit;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+
+  &__contact {
+    display: flex;
+    flex-direction: column;
+  
+    gap: 0.3em;
+
+    p{
+      font-weight: 600;
     }
   }
 }
