Feat Added vercel.json and modified mailto function

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -52,6 +52,12 @@
     }
   }
 
+  &__links {
+    &:hover{
+      font-weight: initial;
+    }
+  }
+
   &__contact {
     display: flex;
     flex-direction: column;
