FIX: Titles styles enhanceds

--- a/src/styles/AreaDiagnostica.scss
+++ b/src/styles/AreaDiagnostica.scss
@@ -1,11 +1,8 @@
+@import "./Schema.scss";
+
 .diag{
     width: 90%;
     margin: 0 auto;
-
-    &__title{
-        text-align: center;
-        padding-bottom: 20px;
-    }
 
     &__content{
         width: 80%;
