--- a/src/styles/Schema.scss
+++ b/src/styles/Schema.scss
@@ -6,6 +6,11 @@ $border: 1px solid #8d8c8c;
 $grey: #333;
 $unactive: #9b9b9b;
 
+.title{
+  text-align: center;
+  padding: 20px;
+}
+
 .primary_button{
     border: none;
     border-radius: 25px;
