--- a/src/styles/CuadroMedico.scss
+++ b/src/styles/CuadroMedico.scss
@@ -1,10 +1,7 @@
+@import "./Schema.scss";
+
 .medicalChart{
     text-align: center;
-
-    &__title{
-        text-align: center;
-        padding: 50px;
-    }
 
     &__search{
         padding: 20px;
