--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -53,6 +53,7 @@
     }
     &__svg {
       height: 1em;
+      margin-top: -1px;
     }
   }
 
@@ -61,10 +62,19 @@
       font-weight: initial;
     }
   }
+  &__mail{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    align-items: flex-start;
+  }
 
   &__contact {
     display: flex;
     flex-direction: column;
+    justify-content: center;
   
     gap: 0.3em;
 
