Feat: map styles and component modified

--- a/src/styles/Map.scss
+++ b/src/styles/Map.scss
@@ -1,8 +1,8 @@
+.map {
+  padding: 1em 0;
+}
 .leaflet-container {
-  width: 70%;
+  width: 80%;
   height: 50vh;
   margin: 0 auto;
-  margin-top: 2em;
-
 }
-
