Fix responsive style at formlogin

--- a/src/styles/FormLogin.scss
+++ b/src/styles/FormLogin.scss
@@ -1,15 +1,16 @@
 @import "Schema.scss";
 
-.formLogin__box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 1em;
+.formLogin__box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 1em;
 }
 
 .formLogin {
   margin: 0 auto;
-  width: 380px;
+  width: 50vw;
+  min-width: 300px;
   height: 380px;
   text-align: center;
   display: flex;
@@ -20,73 +21,105 @@
   overflow: hidden;
   border-radius: 25px;
 
+  @include tablet {
+    width: 380px;
+  }
+
   form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 375px;
+    width: calc(50vw - 5px);
+    min-width: 295px;
     height: 375px;
     background-color: $background-color;
     z-index: 2;
     border-radius: 25px;
 
+    @include tablet {
+      width: 375px;
+    }
 
     h2 {
       font-size: 2em;
       padding-bottom: 1em;
     }
 
-    p{
-        padding: 0.2em 0;
+    p {
+      padding: 0.2em 0;
     }
 
     label {
-      font-size: 1em;
+      font-size: 1.2em;
+      padding: 0.2em 0;
+      font-weight: 600;
+
+      @include tablet {
+        font-size: 1em;
+      }
     }
 
+    input {
+      width: 50%;
+      min-width: 35vw;
+
+      @include tablet {
+        width: 100%;
+        min-width: unset;
+      }
+    }
   }
 
   span {
     cursor: pointer;
     text-decoration: underline blue;
   }
-
 }
 
-.formLogin::before{
-    content:"";
-    z-index: 1;
-    position:absolute;
-    top: -50%;
-    left: -50%;
+.formLogin::before {
+  content: "";
+  z-index: 1;
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 50vw;
+  min-width: 300px;
+  height: 380px;
+  transform-origin: bottom right;
+  background: linear-gradient(0deg, transparent, $base-color, $base-color);
+  animation: formAnimate 8s linear infinite;
+
+  @include tablet {
     width: 380px;
-    height: 380px;
-    transform-origin: bottom right;
-    background: linear-gradient(0deg, transparent, $base-color, $base-color);
-    animation: formAnimate 8s linear infinite;
+  }
 }
 
-.formLogin::after{
-    content:"";
-    z-index: 1;
-    position:absolute;
-    top: -50%;
-    left: -50%;
+.formLogin::after {
+  content: "";
+  z-index: 1;
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 50vw;
+  min-width: 300px;
+  height: 380px;
+  transform-origin: bottom right;
+  background: linear-gradient(0deg, transparent, $base-color, $base-color);
+  animation: formAnimate 8s linear infinite;
+  animation-delay: -4s;
+
+  @include tablet {
     width: 380px;
-    height: 380px;
-    transform-origin: bottom right;
-    background: linear-gradient(0deg, transparent, $base-color, $base-color);
-    animation: formAnimate 8s linear infinite;
-    animation-delay: -4s;
+  }
 }
 
 @keyframes formAnimate {
-    0%{
-        transform: rotate(0deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
 
-    100%{
-        transform: rotate(360deg)
-    }
+  100% {
+    transform: rotate(360deg);
+  }
 }
