--- a/src/styles/Map.scss
+++ b/src/styles/Map.scss
@@ -1,8 +1,10 @@
+@import "Schema.scss";
 .map {
   padding: 1em 0;
 }
 .leaflet-container {
-  width: 80%;
+  width: 90%;
   height: 50vh;
   margin: 0 auto;
+
 }
