--- a/src/styles/CuadroMedico.scss
+++ b/src/styles/CuadroMedico.scss
@@ -1,20 +1,28 @@
 @import "./Schema.scss";
 
-.medicalChart{
-    text-align: center;
+.doctor {
+    padding: 50px;
 
     &__search{
         padding: 20px;
+        text-align: center;
 
         input{
-            width: 300px;
-            height: 3vh;
+            width: 250px;
             font-size: 15px;
             text-align: center;
+            border: none;
+            border-bottom: 2px solid $base-color;
+            background-color: $background-color;
         }
 
         input::placeholder {
             text-align: center;
+            color: black;
         }
+    }
+
+    &__cards {
+        gap: 100px;
     }
 }
