--- a/src/styles/DoctorsCard.scss
+++ b/src/styles/DoctorsCard.scss
@@ -1,14 +1,16 @@
+@import "./Schema.scss";
+
 .doctors{
     display: flex;
-    padding: 30px;
     border-radius: 16px;
-/*     flex-direction: column; */
-    justify-content: center;
+    gap: 30px;
+    margin-bottom: 5vh;
+    border: 3px solid $base-color;
 
     img{
-        width: 200px;
-        border-radius: 500px;
-
+        width: 150px;
+        border-radius: 100px;
+        padding: 10px;
     }
 
     &__info {
@@ -16,6 +18,23 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-    }
+        gap: 30px;
 
+        h4{
+            font-size: 25px;
+        }
+
+        span{
+            color: $base-color;
+            font-weight: bold;
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    .doctors {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 }
