--- a/src/styles/DropdownMenu.scss
+++ b/src/styles/DropdownMenu.scss
@@ -20,11 +20,13 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin-left: 8px;
   }
 
   &__links {
     padding-top: 20px;
     font-size: 1.5em;
+    color: black;
   }
   &__button {
     position: absolute;
@@ -37,11 +39,56 @@
     justify-content: center;
     align-items: center;
     background-color: $background-color;
-
   }
-  &__svg {
-    height: 2.5em;
-    width: 2.5em;
-    
+  
+  &__li{     
+    &__horario {
+      padding-top: 0.5em;
+      border-bottom: $border;
+      font-weight: 600;
+    }
   }
+  &__p{
+    font-size: 3em;
+  }
+  
+  &__li--horario{
+    padding-top: 20px;
+    font-size: 1.5em;
+    color: black;
+  }
+  
+  &__ul {
+    width:350px;
+    font-size: 0.8em;
+    margin-left: 7px;
+    margin-top: 20px;;
+    font-weight: 500;
+    border-top: 1px solid black;
+  }
+  
+  &__mail {
+    padding-top: 10px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  &__li--svg {
+    height: 15px;
+    width: 20px;
+    padding-right: 10px;
+  }
+  &__svg--x{
+    height: 30px;
+    width: 30px;
+   }
+  &__links--email{
+  padding: 0; 
+  margin-left: -10px;
+ }
+ 
+  
 }
