--- a/src/styles/Schema.scss
+++ b/src/styles/Schema.scss
@@ -1,10 +1,11 @@
-
 $base-color: #8cc9a9;
 $secondary-color: #e2e1e1;
 $background-color: #f4f3ef;
 $border: 1px solid #8d8c8c;
 $grey: #333;
 $unactive: #9b9b9b;
+
+$generalFont: 16px;
 
 .title{
   text-align: center;
