--- a/src/styles/FormLogin.scss
+++ b/src/styles/FormLogin.scss
@@ -9,6 +9,7 @@
 
 .formLogin {
   margin: 0 auto;
+  font-size: 16px;
   width: 50vw;
   min-width: 300px;
   height: 380px;
@@ -43,11 +44,18 @@
 
     h2 {
       font-size: 2em;
-      padding-bottom: 1em;
-    }
+      padding-top: 1em;
 
+      @include tablet {
+        padding: 0.5em 0;
+      }
+    }
     p {
-      padding: 0.2em 0;
+      padding: 0;
+
+      @include tablet {
+        padding: 0.2em 0;
+      }
     }
 
     label {
