--- a/src/styles/DropdownMenu.scss
+++ b/src/styles/DropdownMenu.scss
@@ -10,10 +10,8 @@
   height: 100vh;
   background-color: $background-color;
   z-index: 999;
-  -webkit-box-shadow: -5px 9px 21px -4px rgba(0, 0, 0, 0.39);
-  -moz-box-shadow: -5px 9px 21px -4px rgba(0, 0, 0, 0.39);
-  box-shadow: -5px 9px 21px -4px rgba(0, 0, 0, 0.39);
   transition: right 1.5s;
+  box-shadow: 0px 15px 10px -15px #111;  
 
   &__logo {
     padding: 15px 0;
@@ -95,9 +93,7 @@
     margin-left: -10px;
   }
 }
-.active{
+.active {
   width: 100%;
   right: 0;
-  
-
 }
