fix various styles

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,3 +1,4 @@
+@import "Schema.scss";
 .navbar {
     width: 80%;
     display: flex;
@@ -6,21 +7,9 @@
     align-items: center;
 
     &__links{
-        margin: 0 .5em;
-    }
-}
-
-@media screen and (max-width:480px){
-    .navbar .isActive{
-        width: 100%;
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: center;
-        align-items: center; 
-        &__links{
-           margin: .5em 0; 
-        }
-
-
+        margin: 0.5em;
+        &:hover {
+            text-decoration: underline $base-color;
+          }
     }
 }
