--- a/src/styles/Especialidades.scss
+++ b/src/styles/Especialidades.scss
@@ -9,21 +9,29 @@
 
   &__box {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     gap: 10px;
     padding-bottom: 10px;
   }
-  @media screen and (max-width: 821px) {
+  @include tablet {
     &__box {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: center;
+    }
+    &__box--text {
+      width: 400px;
+      height: 400px;
+    }
+    &__box--img {
+      width: 400px;
+      height: 400px;
     }
   }
 
   &__box--text {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     background-color: white;
     padding-right: 20px;
     padding-left: 20px;
@@ -41,8 +49,8 @@
   }
 
   &__box--img {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
   }
   &__img {
     height: 100%;
