fix footer mail link

--- a/src/styles/PedirCita.scss
+++ b/src/styles/PedirCita.scss
@@ -1,6 +1,7 @@
 @import "./Schema.scss";
 
 .pedirCita{
+    font-size: $generalFont;
     margin: 0 auto;
     text-align: center;
     padding: 1em;
