--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -2,12 +2,13 @@
 
 .header {
   width: 100%;
-  padding: 0.7em 0;
+  padding-top: 0.7em;
   margin: 0 auto;
   display: none;
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
+  border-bottom: $border;
   
 
   &__logo {
