--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -30,16 +30,6 @@
     min-height: max-content;
     max-height: 73vh;
 
-    // @include tablet{
-    //     left: 25%;
-    //     top: 85%;
-    // }
-
-    // @include desktop{
-    //     left: 27%;
-    //     top: 90%;
-    // }
-
     &--button {
       position: absolute;
       left: 25%;
@@ -163,7 +153,7 @@
         }
 
         @include tablet {
-            width: 12vw;
+          width: 12vw;
         }
       }
     }
@@ -187,29 +177,27 @@
 
     &--h2 {
       position: absolute;
-      top: 55%;
-      left: 10%;
-      font-size: 2.3vw;
-      color: $grey;
+      top: 75%;
+      text-align: center;
+      left: 0;
+      right: 0;
+      font-size: 2vw;
+      color: black;
       text-transform: uppercase;
 
       @include tablet {
         font-size: 2.4vw;
-        top: 70%;
-        left: 10%;
-      }
-
-      @include desktop {
-        top: 75%;
-        left: 10%;
+        text-align: center;
+        left: 0;
+        right: 0;
         text-transform: capitalize;
       }
     }
 
     &--btn {
       position: absolute;
+      top: 85%;
       left: 25%;
-      top: 75%;
       width: 50%;
       background-color: $base-color;
       padding: 5px;
