FEAT: added in contact page a title and added styles

--- a/src/styles/Contacto.scss
+++ b/src/styles/Contacto.scss
@@ -1,19 +1,23 @@
 @import "Schema.scss";
 
 .contact {
+  text-align: center;
+
+  &__title {
+    padding: 20px;
+  }
+
+  &__ul {
+    height: 10vh;
     text-align: center;
 
-    &__ul{
-        height: 10vh;
-        text-align: center;
-
-        &--li{
-            margin: 10px;
-            background-color: $base-color;
-            padding: 10px;
-            font-size: 26px;
-            color: white;
-            font-weight: 700;
-        }
+    &--li {
+      margin: 10px;
+      background-color: $base-color;
+      padding: 10px;
+      font-size: 26px;
+      color: white;
+      font-weight: 700;
     }
+  }
 }
